# shopify-challenge-fall-2022

./: .replit  Dockerfile  README.md  config.py  flaskrun  flaskrun.bat  flaskrun.cmd  pyproject.toml  requirements.txt  run.py
application/: __init__.py  models.py  views.py
application/crud/: routes.py
main/: __init__.py  database.db  forms.py  handlers.py  models.py  views.py
main/crud/: routes.py
main/features/: routes.py
main/static/css/: styles.css
main/templates/: index.html
main/templates/errors/: 404.html  500.html
