[tool.poetry]
name = "shopify-challenge-fall-2022"
version = "0.1.0"
description = "Shopify developer challenge fall 2022"
authors = ["Minh Giang"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^1.0.1"
replit = "^3.2.4"
WTForms = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
